--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -21,6 +21,8 @@
     "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.7",
     "echarts": "^5.6.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "ngx-echarts": "^19.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
@@ -35,6 +37,8 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
+    "@types/leaflet.markercluster": "^1.5.5",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
