--- a/vcastplay-cms/angular.json
+++ b/vcastplay-cms/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [ "*" ],
             "outputPath": "dist/vcastplay-cms",
             "index": "src/index.html",
             "browser": "src/main.ts",
