--- a/vcastplay-cms/vercel.json
+++ b/vcastplay-cms/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "angular.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/vcastplay-cms/browser"
-      }
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
