update package json

--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "vercel-build": "ng build --configuration production"
+    "vercel-build": "ng build --configuration production --base-href ./"
   },
   "private": true,
   "dependencies": {
