--- a/vcastplay-cms/vercel.json
+++ b/vcastplay-cms/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build"
+      "src": "dist/vcastplay-cms/browser/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
