--- a/vcastplay-player/package.json
+++ b/vcastplay-player/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "vercel-build": "ng build --configuration production --base-href ./"
+    "vercel-build": "ng build --configuration production --base-href ./",
+    "compile": "ng build --base-href ./ --output-path ../vcastplay-wrapper/dist/player"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,6 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@angular/service-worker": "^19.0.0",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.0.7",
     "postcss": "^8.5.3",
