--- a/vcastplay-wrapper/package.json
+++ b/vcastplay-wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vcastplay-wrapper",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Player app for vcastplay system",
   "main": "main.js",
   "build": {
@@ -9,14 +9,33 @@
     "files": [
       "main.js",
       "preload.js",
+      "assets/",
       "dist/player/**/*"
     ],
     "directories": {
-      "buildResources": "assets"
+      "buildResources": "assets",
+      "output": "build"
     },
     "win": {
-      "target": "nsis",
-      "icon": "icon.ico"
+      "icon": "assets/favicon.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Vcastplay Player"
     }
   },
   "scripts": {
