--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.18",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -22,9 +23,10 @@
     "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.7",
     "echarts": "^5.6.0",
-    "exif-js": "^2.3.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "ngx-echarts": "^19.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
