--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.7",
     "echarts": "^5.6.0",
