--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -30,6 +30,7 @@
     "echarts": "^5.6.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "ngx-echarts": "^19.0.0",
@@ -48,6 +49,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
     "@types/leaflet.markercluster": "^1.5.5",
+    "@types/lodash": "^4.17.20",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
