--- a/vcastplay-player/package.json
+++ b/vcastplay-player/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.0.7",
+    "idb": "^8.0.3",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
