--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
