--- a/vcastplay-player/angular.json
+++ b/vcastplay-player/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "node_modules/video.js/dist/video-js.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -98,6 +99,7 @@
               }
             ],
             "styles": [
+              "node_modules/video.js/dist/video-js.css",
               "src/styles.scss"
             ],
             "scripts": []
