--- a/vcastplay-player/package.json
+++ b/vcastplay-player/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
+    "video.js": "^8.23.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/video.js": "^7.3.58",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
