--- a/vcastplay-player/vercel.json
+++ b/vcastplay-player/vercel.json
@@ -1,4 +1,15 @@
 {
+  "headers": [
+    {
+      "source": "/.well-known/assetlinks.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     { "source": "/ngsw-worker.js", "destination": "/ngsw-worker.js" },
     { "source": "/ngsw.json", "destination": "/ngsw.json" },
