Added design layout

--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -27,7 +27,9 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.7",
+    "@types/fabric": "^5.3.10",
     "echarts": "^5.6.0",
+    "fabric": "^6.7.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
