added socket-client on player

--- a/vcastplay-wrapper/package.json
+++ b/vcastplay-wrapper/package.json
@@ -19,7 +19,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "breadnut1906",
+        "owner": "nyxsys-dev",
         "repo": "vcastplay",
         "releaseType": "release"
       }
