--- a/vcastplay-player/package.json
+++ b/vcastplay-player/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/fabric": "^5.3.10",
     "@types/jasmine": "~5.1.0",
+    "@types/socket.io-client": "^1.4.36",
     "@types/video.js": "^7.3.58",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
