--- a/vcastplay-wrapper/.prettierrc
+++ b/vcastplay-wrapper/.prettierrc
@@ -1,13 +1,7 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
-  "bracketSpacing": true,
-  "printWidth": 100,
-  "arrowParens": "always",
-  "endOfLine": "lf",
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "quoteProps": "as-needed"
+  "printWidth": 100
 }
