--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -43,6 +43,7 @@
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
+    "youtube-player": "^5.6.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@types/leaflet": "^1.9.16",
     "@types/leaflet.markercluster": "^1.5.5",
     "@types/lodash": "^4.17.20",
+    "@types/youtube-player": "^5.5.11",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
