--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/postcss": "^4.0.7",
     "echarts": "^5.6.0",
     "fabric": "^6.7.1",
+    "heic2any": "^0.0.4",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
