--- a/vcastplay-player/package.json
+++ b/vcastplay-player/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^19.0.0",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.0.7",
+    "crypto-js": "^4.2.0",
     "fabric": "^6.7.1",
     "idb": "^8.0.3",
     "postcss": "^8.5.3",
@@ -40,6 +41,7 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/fabric": "^5.3.10",
     "@types/jasmine": "~5.1.0",
     "@types/socket.io-client": "^1.4.36",
