--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -30,6 +30,7 @@
     "echarts": "^5.6.0",
     "fabric": "^6.7.1",
     "heic2any": "^0.0.4",
+    "interactjs": "^1.10.27",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
