--- a/vcastplay-cms/package.json
+++ b/vcastplay-cms/package.json
@@ -11,15 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.15",
-    "@angular/cdk": "^20.2.14",
-    "@angular/common": "^20.3.15",
-    "@angular/compiler": "^20.3.15",
-    "@angular/core": "^20.3.15",
-    "@angular/forms": "^20.3.15",
-    "@angular/platform-browser": "^20.3.15",
-    "@angular/platform-browser-dynamic": "^20.3.15",
-    "@angular/router": "^20.3.15",
+    "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.18",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@primeng/themes": "^19.0.6",
+    "@tailwindcss/postcss": "^4.0.7",
     "echarts": "^5.6.0",
     "fabric": "^6.7.1",
     "heic2any": "^0.0.4",
@@ -31,17 +38,20 @@
     "moment-timezone": "^0.6.0",
     "ngx-echarts": "^19.0.0",
     "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.6",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "utif": "^3.1.0",
     "uuid": "^11.1.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.12",
-    "@angular/cli": "^20.3.12",
-    "@angular/compiler-cli": "^20.3.15",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular/cli": "^19.0.6",
+    "@angular/compiler-cli": "^19.0.0",
     "@types/fabric": "^5.3.10",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
@@ -53,7 +63,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.3",
-    "typescript": "~5.9.3"
+    "typescript": "~5.6.2"
   }
 }
